--- a/index.html
+++ b/index.html
@@ -4,15 +4,28 @@
     <meta charset="UTF-8" />
     <link
       rel="icon"
-      type="image/svg+xml"
-      href="/vite.svg"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon-32x32.png"
     />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <!--    TODO: Update page title  -->
-    <title>Frontend Mentor | TODO: Project Name Here </title>
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap"
+      rel="stylesheet"
+    />
+    <title>Frontend Mentor | 3-column preview card component</title>
   </head>
   <body>
     <div id="root"></div>
